fix spacing classes section

--- a/assets/css/3-sections/_classes.sass
+++ b/assets/css/3-sections/_classes.sass
@@ -10,6 +10,10 @@
       max-width: 500px
       margin: auto
 
+      @media (max-width: $desktop-width)
+        &:nth-child(1)
+          margin-bottom: 25px
+
       .text-container
         max-width: 85%
 
